tests/zer_fail/dalpha5_enable_args.zer
// EXPECTED: compile error
// @mmu_enable takes no arguments

i32 main() {
    @mmu_enable(1);  // error: takes no args
    return 0;
}
